@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Improved support for C++ in Module::Build::FFI
 
 0.17      2015-01-28 11:11:02 -0500
   - Allow integer and floating point type default to 0 when not provided
